fix(style): add z-index

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ div#attribution {
     flex-direction: row;
     position: sticky;
     top: 0;
+    z-index: 99999999;
 }
 
 div#attribution .left {
